jdk-1.4 compliance fix
git-svn-id: http://svn.apache.org/repos/asf/portals/jetspeed-2/trunk@541295 13f79535-47bb-0310-9956-ffa450edef68